[package]
name = "slatec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/slatec"
description = "Safe Rust interface to selected SLATEC numerical routines"
readme = "README.md"
keywords = ["slatec", "numerics", "fortran", "scientific", "mathematics"]
categories = ["science", "mathematics", "api-bindings"]
include = ["src/**", "tests/**", "examples/**", "Cargo.toml", "README.md", "AGENTS.md", "LICENSE-*"]

[package.metadata.docs.rs]
default-features = false
features = ["std", "external-backend", "full"]
targets = ["x86_64-pc-windows-gnu"]

[features]
default = ["std"]
alloc = ["slatec-core/alloc"]
std = ["alloc", "slatec-core/std"]

# Implementation providers are orthogonal to API capability. Exactly one is
# required when a native family is selected; the provider crate enforces this.
prebuilt = ["slatec-src/prebuilt"]
source-build = ["slatec-src/source-build"]
system = ["slatec-src/system"]
external-backend = ["slatec-src/external-backend"]

blas = ["blas-level1", "blas-level2", "blas-level3"]
blas-level1-validation = [
    "slatec-core/ffi-profile-gnu-mingw-x86_64",
    "slatec-sys/ffi-profile-gnu-mingw-x86_64",
]
blas-level1 = [
    "blas-level1-validation",
    "slatec-sys/raw-family-blas-level1",
    "slatec-src/blas-level1",
]
blas-level1-native-tests = ["blas-level1"]
blas-level1-concurrency-native-tests = [
    "std",
    "blas-level1-native-tests",
    "native-serialization-tests",
]
blas-level2 = [
    "blas-level1-validation",
    "slatec-sys/raw-family-blas-level2",
    "slatec-src/blas-level2",
]
blas-level3 = [
    "blas-level1-validation",
    "slatec-sys/raw-family-blas-level3",
    "slatec-src/blas-level3",
]
blas-level23-native-tests = ["blas-level2", "blas-level3"]
blas-raw-link-tests = ["blas"]
blas-raw-native-tests = ["blas-raw-link-tests"]

special = [
    "special-elementary", "special-gamma", "special-beta", "special-error",
    "special-airy", "special-bessel", "special-integrals", "special-polynomials",
    "special-scalar-expanded",
]
special-common = ["std", "blas-level1-validation"]
special-f32 = []
special-elementary = ["special-common", "special-f32", "slatec-sys/raw-family-special-elementary", "slatec-src/special-elementary"]
special-gamma = ["special-common", "special-f32", "slatec-sys/raw-family-special-gamma", "slatec-src/special-gamma"]
special-beta = ["special-common", "special-f32", "slatec-sys/raw-family-special-beta", "slatec-src/special-beta"]
special-error = ["special-common", "special-f32", "slatec-sys/raw-family-special-error", "slatec-src/special-error"]
special-airy = ["special-common", "special-f32", "slatec-sys/raw-family-special-airy", "slatec-src/special-airy"]
special-bessel = ["special-common", "special-f32", "slatec-sys/raw-family-special-bessel", "slatec-src/special-bessel"]
special-integrals = ["special-common", "special-f32", "slatec-sys/raw-family-special-integrals", "slatec-src/special-integrals"]
special-polynomials = ["special-common", "special-f32", "slatec-sys/raw-family-special-polynomials", "slatec-src/special-polynomials"]
special-scalar-expanded = ["special-common", "special-f32", "slatec-sys/raw-family-special-scalar-expanded", "slatec-src/special-scalar-expanded"]
special-scalar-expanded-native-tests = ["special-scalar-expanded"]
special-raw-link-tests = ["special"]
special-raw-native-tests = ["special-raw-link-tests"]
raw-all-compile = ["slatec-sys/all"]
raw-all-link-tests = ["raw-all-compile", "full"]
raw-canonical-link-tests = ["std", "source-build", "slatec-sys/all", "slatec-src/canonical-numeric-provider"]
raw-canonical-native-tests = ["raw-canonical-link-tests"]
raw-callback-link-tests = [
    "std",
    "source-build",
    "slatec-sys/all",
    "slatec-src/quadrature",
    "slatec-src/linear-algebra",
    "slatec-src/ode",
]
raw-callback-native-tests = ["raw-callback-link-tests"]
raw-complex-abi-link-tests = [
    "std",
    "source-build",
    "slatec-sys/all",
    "slatec-src/complex-abi-provider",
]
raw-complex-abi-native-tests = ["raw-complex-abi-link-tests"]
raw-final-coverage-link-tests = [
    "std",
    "source-build",
    "slatec-sys/all",
    "slatec-src/quadrature",
    "slatec-src/nonlinear",
    "slatec-src/least-squares",
    "slatec-src/ode-sdrive-expert",
    "slatec-src/dassl",
    "slatec-src/optimization-linear-programming-in-memory",
]

quadrature = [
    "quadrature-basic", "quadrature-breakpoints", "quadrature-weighted",
    "quadrature-oscillatory", "quadrature-fourier", "quadrature-nonadaptive",
    "quadrature-piecewise-polynomial", "tabulated-data",
]
quadrature-common = ["std", "blas-level1-validation"]
quadrature-basic = ["quadrature-common", "slatec-sys/raw-family-quadrature-basic", "slatec-src/quadrature-basic"]
quadrature-breakpoints = ["quadrature-common", "slatec-sys/raw-family-quadrature-breakpoints", "slatec-src/quadrature-breakpoints"]
quadrature-weighted = ["quadrature-common", "slatec-sys/raw-family-quadrature-weighted", "slatec-src/quadrature-weighted"]
quadrature-oscillatory = ["quadrature-common", "slatec-sys/raw-family-quadrature-oscillatory", "slatec-src/quadrature-oscillatory"]
quadrature-fourier = ["quadrature-common", "slatec-sys/raw-family-quadrature-fourier", "slatec-src/quadrature-fourier"]
quadrature-nonadaptive = ["quadrature-common", "slatec-sys/raw-family-quadrature-nonadaptive", "slatec-src/quadrature-nonadaptive"]
quadrature-piecewise-polynomial = [
    "quadrature-common",
    "piecewise-polynomial",
    "slatec-sys/quadrature-callbacks",
    "slatec-src/quadrature-callbacks",
]
tabulated-data = [
    "std",
    "blas-level1-validation",
    "slatec-sys/interpolation-general",
    "slatec-src/interpolation-general",
    "slatec-sys/quadrature-direct",
    "slatec-src/quadrature-direct",
]
tabulated-data-native-tests = ["tabulated-data"]
quadrature-native-tests = ["quadrature"]

roots = ["roots-scalar", "roots-polynomial"]
roots-scalar = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-roots-scalar",
    "slatec-src/roots-scalar",
]
roots-native-tests = ["roots", "quadrature"]
roots-polynomial = [
    "std",
    "blas-level1-validation",
    "dep:num-complex",
    "slatec-sys/nonlinear-complex",
    "slatec-src/nonlinear-complex",
]
roots-polynomial-native-tests = ["roots-polynomial", "native-lock-test-support"]

nonlinear = ["nonlinear-easy", "nonlinear-expert", "nonlinear-jacobian-check", "nonlinear-systems"]
nonlinear-easy = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-nonlinear-easy",
    "slatec-src/nonlinear-easy",
]
nonlinear-expert = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-nonlinear-expert",
    "slatec-src/nonlinear-expert",
]
nonlinear-jacobian-check = [
    "alloc",
    "blas-level1-validation",
    "slatec-sys/raw-family-nonlinear-jacobian-check",
    "slatec-src/nonlinear-jacobian-check",
]
nonlinear-systems = [
    "std",
    "blas-level1-validation",
    "slatec-sys/nonlinear-systems",
    "slatec-src/nonlinear-systems",
]
nonlinear-systems-native-tests = ["nonlinear-systems"]
nonlinear-native-tests = ["nonlinear", "quadrature", "roots-scalar"]

ode = ["ode-sdrive-expert"]
ode-sdrive-expert = [
    "std",
    "blas-level1-validation",
    "dep:num-complex",
    "slatec-sys/raw-family-ode-sdrive-expert",
    "slatec-src/ode-sdrive-expert",
]
ode-sdrive-expert-native-tests = ["ode-sdrive-expert"]
small-raw-candidate-native-tests = [
    "std",
    "blas-level1-validation",
    "slatec-sys/quadrature-callbacks",
    "slatec-src/quadrature-callbacks",
    "slatec-sys/raw-family-ode-sdrive-expert",
    "slatec-src/ode-sdrive-expert",
]
dassl = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-dassl",
    "slatec-src/dassl",
]
dassl-native-tests = ["dassl"]

optimization = ["optimization-linear-programming-in-memory"]
optimization-linear-programming-in-memory = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-optimization-linear-programming-in-memory",
    "slatec-src/optimization-linear-programming-in-memory",
]
optimization-linear-programming-in-memory-native-tests = [
    "optimization-linear-programming-in-memory",
]

# Weighted polynomial least-squares fitting over the reviewed POLFIT/DPOLFT
# representation. This is intentionally separate from global interpolation:
# fitted samples need not have distinct or ordered abscissas.
approximation = ["approximation-polynomial-fitting"]
approximation-polynomial-fitting = [
    "std",
    "blas-level1-validation",
    "slatec-sys/approximation-core",
    "slatec-src/approximation-core",
]
approximation-polynomial-fitting-native-tests = [
    "approximation-polynomial-fitting",
    "native-lock-test-support",
]

fftpack-real = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-fftpack-real",
    "slatec-src/fftpack-real",
]
fftpack-real-native-tests = ["fftpack-real"]
fftpack-complex = [
    "std",
    "blas-level1-validation",
    "dep:num-complex",
    "slatec-sys/raw-family-fftpack-complex",
    "slatec-src/fftpack-complex",
]
fftpack-complex-native-tests = ["fftpack-complex"]
fishpack-cartesian-2d = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-fishpack-cartesian-2d",
    "slatec-src/fishpack-cartesian-2d",
]
fishpack-cartesian-2d-native-tests = ["fishpack-cartesian-2d"]
fishpack-pois3d = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-fishpack-pois3d",
    "slatec-src/fishpack-pois3d",
]
fishpack-pois3d-native-tests = ["fishpack-pois3d"]
banded-linear-systems = ["std", "blas-level1-validation", "slatec-sys/raw-family-banded-linear-systems", "slatec-src/banded-linear-systems"]
banded-linear-systems-native-tests = ["banded-linear-systems"]
pchip = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-pchip",
    "slatec-src/pchip",
]
pchip-native-tests = ["pchip"]
bspline = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-bspline",
    "slatec-src/bspline",
]
bspline-native-tests = ["bspline"]
bspline-cubic-interpolation = [
    "bspline",
    "slatec-sys/interpolation-general",
    "slatec-src/interpolation-general",
]
bspline-cubic-interpolation-native-tests = ["bspline-cubic-interpolation", "native-lock-test-support"]
piecewise-polynomial = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-piecewise-polynomial",
    "slatec-src/piecewise-polynomial",
]
piecewise-polynomial-native-tests = ["piecewise-polynomial", "bspline"]
native-serialization-tests = [
    "std",
    "native-lock-test-support",
    "optimization-linear-programming-in-memory-native-tests",
    "fftpack-real-native-tests",
    "fftpack-complex-native-tests",
    "fishpack-cartesian-2d-native-tests",
    "fishpack-pois3d-native-tests",
    "banded-linear-systems-native-tests",
    "pchip-native-tests",
    "bspline-native-tests",
    "piecewise-polynomial-native-tests",
    "dassl-native-tests",
    "ode-sdrive-expert-native-tests",
    "quadrature-native-tests",
    "roots-native-tests",
    "least-squares-linear-bounded-native-tests",
    "least-squares-linear-nonnegative-native-tests",
    "special-gamma",
]
native-lock-test-support = ["std"]

least-squares = ["least-squares-nonlinear", "least-squares-covariance", "least-squares-linear"]
least-squares-nonlinear = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
]
least-squares-nonlinear-easy = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-nonlinear-easy",
    "slatec-src/least-squares-nonlinear-easy",
]
least-squares-nonlinear-expert = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-nonlinear-expert",
    "slatec-src/least-squares-nonlinear-expert",
]
least-squares-covariance = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-covariance",
    "slatec-src/least-squares-covariance",
]
least-squares-linear = [
    "least-squares-linear-nonnegative",
    "least-squares-linear-bounded",
    "least-squares-linear-constrained",
    "least-squares-linear-bounded-constrained",
]
least-squares-linear-nonnegative = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-linear-nonnegative",
    "slatec-src/least-squares-linear-nonnegative",
]
least-squares-linear-bounded = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-linear-bounded",
    "slatec-src/least-squares-linear-bounded",
]
least-squares-linear-constrained = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-linear-constrained",
    "slatec-src/least-squares-linear-constrained",
]
least-squares-linear-bounded-constrained = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-family-least-squares-linear-bounded-constrained",
    "slatec-src/least-squares-linear-bounded-constrained",
]
least-squares-linear-nonnegative-native-tests = ["least-squares-linear-nonnegative"]
least-squares-linear-bounded-native-tests = ["least-squares-linear-bounded"]
least-squares-linear-constrained-native-tests = ["least-squares-linear-constrained"]
least-squares-linear-bounded-constrained-native-tests = [
    "least-squares-linear-bounded-constrained",
    "least-squares-linear-bounded",
    "least-squares-linear-constrained",
]
least-squares-covariance-native-tests = ["least-squares-covariance"]
least-squares-native-tests = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
    "quadrature",
    "roots-scalar",
    "nonlinear-easy",
    "nonlinear-expert",
    "least-squares-covariance-native-tests",
    "least-squares-linear-nonnegative-native-tests",
    "least-squares-linear-bounded-native-tests",
    "least-squares-linear-constrained-native-tests",
    "least-squares-linear-bounded-constrained-native-tests",
]

# Compatibility names retained for downstream manifests from earlier releases.
integrate = ["quadrature"]
interpolate = ["pchip", "bspline", "bspline-cubic-interpolation", "piecewise-polynomial", "tabulated-data"]
optimize = ["optimization"]
full = ["blas", "quadrature", "roots", "nonlinear", "least-squares", "ode", "dassl", "optimization", "approximation", "fftpack-real", "fftpack-complex", "fishpack-cartesian-2d", "fishpack-pois3d", "banded-linear-systems", "pchip", "interpolate", "optimize", "special"]
special-functions = ["special"]
special-functions-f32 = ["special"]
special-functions-polynomials = ["special-polynomials"]
special-functions-native-tests = [
    "special-functions-f32",
    "special-functions-polynomials",
    "special-scalar-expanded-native-tests",
    "slatec-sys/raw-ffi-scalar-functions",
]

[dependencies]
slatec-core.workspace = true
slatec-sys.workspace = true
slatec-src.workspace = true
num-complex = { workspace = true, optional = true }

[[example]]
name = "link_gamma"
required-features = ["special-gamma"]

[[example]]
name = "link_airy"
required-features = ["special-airy"]

[[example]]
name = "link_blas_level1"
required-features = ["blas-level1"]

[[example]]
name = "link_blas_level1_saxpy"
required-features = ["blas-level1"]

[[example]]
name = "link_blas_level2_gemv"
required-features = ["blas-level2"]

[[example]]
name = "link_safe_all_no_call"
required-features = ["full"]

[[example]]
name = "link_quadrature_basic"
required-features = ["quadrature-basic"]

[[example]]
name = "link_complete_safe_api"
required-features = ["full"]

[[example]]
name = "link_elementary"
required-features = ["special-elementary"]

[[example]]
name = "link_bessel"
required-features = ["special-bessel"]

[[example]]
name = "link_blas_level3"
required-features = ["blas-level3"]

[[example]]
name = "raw_blas_level1_axpy"
required-features = ["blas"]

[[example]]
name = "raw_blas_level2_gemv"
required-features = ["blas"]

[[example]]
name = "raw_blas_level2_triangular_solve"
required-features = ["blas"]

[[example]]
name = "raw_blas_level3_gemm"
required-features = ["blas"]

[[example]]
name = "raw_blas_complex"
required-features = ["blas"]

[[example]]
name = "raw_special_elementary"
required-features = ["special-elementary"]

[[example]]
name = "raw_special_gamma"
required-features = ["special-gamma"]

[[example]]
name = "raw_special_beta"
required-features = ["special-beta"]

[[example]]
name = "raw_special_error_functions"
required-features = ["special-error"]

[[example]]
name = "raw_airy"
required-features = ["special-airy"]

[[example]]
name = "raw_all_features_compile"
required-features = ["raw-all-compile"]

[[example]]
name = "link_quadrature_oscillatory"
required-features = ["quadrature-oscillatory"]

[[example]]
name = "link_roots_scalar"
required-features = ["roots-scalar"]

[[example]]
name = "link_nonlinear_easy"
required-features = ["nonlinear-easy"]

[[example]]
name = "link_nonlinear_expert"
required-features = ["nonlinear-expert"]

[[example]]
name = "link_nonlinear_analytic"
required-features = ["nonlinear-expert"]

[[example]]
name = "link_nonlinear_jacobian_check"
required-features = ["nonlinear-jacobian-check"]

[[example]]
name = "link_least_squares_nonlinear_easy"
required-features = ["least-squares-nonlinear-easy"]

[[example]]
name = "link_least_squares_nonlinear_expert"
required-features = ["least-squares-nonlinear-expert"]

[[example]]
name = "link_least_squares_covariance"
required-features = ["least-squares-covariance"]

[[example]]
name = "link_least_squares_linear_nonnegative"
required-features = ["least-squares-linear-nonnegative"]

[[example]]
name = "link_least_squares_linear_bounded"
required-features = ["least-squares-linear-bounded"]

[[example]]
name = "link_least_squares_linear_constrained"
required-features = ["least-squares-linear-constrained"]

[[example]]
name = "link_least_squares_linear_bounded_constrained"
required-features = ["least-squares-linear-bounded-constrained"]

[[example]]
name = "link_ode_sdrive"
required-features = ["ode-sdrive-expert"]

[[example]]
name = "callback_driver_expansion"
required-features = ["quadrature-piecewise-polynomial", "nonlinear-systems", "ode-sdrive-expert"]

[[test]]
name = "callback_driver_expansion"
path = "tests/callback_driver_expansion.rs"
required-features = ["quadrature-piecewise-polynomial", "nonlinear-systems", "ode-sdrive-expert"]

[[test]]
name = "tabulated_data_native"
path = "tests/tabulated_data_native.rs"
required-features = ["tabulated-data"]

[[example]]
name = "link_dassl"
required-features = ["dassl"]

[[example]]
name = "link_linear_programming_in_memory"
required-features = ["optimization-linear-programming-in-memory"]

[[example]]
name = "polynomial_fit"
path = "../../examples/approximation/polynomial_fit.rs"
required-features = ["approximation-polynomial-fitting"]

[[example]]
name = "link_fftpack_real"
required-features = ["fftpack-real"]

[[example]]
name = "link_fftpack_complex"
required-features = ["fftpack-complex"]

[[example]]
name = "fishpack_cartesian_2d"
path = "examples/fishpack_cartesian_2d.rs"
required-features = ["fishpack-cartesian-2d"]

[[example]]
name = "fishpack_pois3d"
path = "examples/fishpack_pois3d.rs"
required-features = ["fishpack-pois3d"]

[[example]]
name = "banded_factor_and_solve"
path = "examples/banded/factor_and_solve.rs"
required-features = ["banded-linear-systems"]

[[example]]
name = "fftpack_complex_round_trip"
path = "examples/fftpack/complex_round_trip.rs"
required-features = ["fftpack-complex"]

[[example]]
name = "fftpack_complex_spectrum"
path = "examples/fftpack/complex_spectrum.rs"
required-features = ["fftpack-complex"]

[[example]]
name = "link_pchip"
required-features = ["pchip"]

[[example]]
name = "link_bspline"
required-features = ["bspline"]

[[example]]
name = "link_piecewise_polynomial"
required-features = ["piecewise-polynomial"]

[[example]]
name = "piecewise_polynomial_from_pieces"
path = "examples/piecewise_polynomial/from_pieces.rs"
required-features = ["piecewise-polynomial"]

[[example]]
name = "piecewise_polynomial_evaluate_derivatives"
path = "examples/piecewise_polynomial/evaluate_derivatives.rs"
required-features = ["piecewise-polynomial"]

[[example]]
name = "piecewise_polynomial_integrate"
path = "examples/piecewise_polynomial/integrate.rs"
required-features = ["piecewise-polynomial"]

[[example]]
name = "piecewise_polynomial_from_bspline"
path = "examples/piecewise_polynomial/from_bspline.rs"
required-features = ["piecewise-polynomial", "bspline"]

[[example]]
name = "bspline_from_parts"
path = "examples/bspline/from_parts.rs"
required-features = ["bspline"]

[[example]]
name = "bspline_derivatives"
path = "examples/bspline/derivatives.rs"
required-features = ["bspline"]

[[example]]
name = "bspline_integrate"
path = "examples/bspline/integrate.rs"
required-features = ["bspline"]

[[example]]
name = "bspline_interpolate"
path = "examples/interpolation/bspline_interpolate.rs"
required-features = ["bspline"]

[[example]]
name = "bspline_cubic_interpolate"
path = "../../examples/interpolation/bspline_cubic_interpolate.rs"
required-features = ["bspline-cubic-interpolation"]

[[example]]
name = "bspline_interpolate_and_convert"
path = "examples/interpolation/bspline_interpolate_and_convert.rs"
required-features = ["bspline", "piecewise-polynomial"]

[[example]]
name = "tabulated_data"
path = "../../examples/interpolation/tabulated_data.rs"
required-features = ["tabulated-data"]

[[example]]
name = "polynomial_roots"
path = "../../examples/roots/polynomial_roots.rs"
required-features = ["roots-polynomial"]

[[test]]
name = "bspline_cubic_native"
path = "tests/bspline_cubic_native.rs"
required-features = ["bspline-cubic-interpolation-native-tests"]

[[test]]
name = "polynomial_roots_native"
path = "tests/polynomial_roots_native.rs"
required-features = ["roots-polynomial-native-tests"]

[[test]]
name = "polynomial_fit_native"
path = "tests/polynomial_fit_native.rs"
required-features = ["approximation-polynomial-fitting-native-tests"]

[[example]]
name = "link_special_scalar"
path = "examples/link_special_scalar.rs"
required-features = ["special-scalar-expanded"]

[[example]]
name = "special_integrals"
path = "examples/special/integrals.rs"
required-features = ["special-scalar-expanded"]

[[example]]
name = "special_elliptic"
path = "examples/special/elliptic.rs"
required-features = ["special-scalar-expanded"]
